# AdaptiveX

./: .gitignore  CmakeLists.txt  README.md
app/: CmakeLists.txt  test_adx_GroupSetMcode.c  test_adx_GroupSetOverride.c  test_adx_GroupSetOverrideMultiBlock.c  test_adx_GroupStop2MoveLinearAbsolute.c  test_adx_MoveAbsolute.c  test_adx_MoveAbsolute2MoveVelocity.c  test_adx_MoveAbsoluteBlend.c  test_adx_MoveLinearAbsolute.c  test_adx_MoveLinearAbsoluteLookAhead.c  test_adx_MoveRelative.c  test_adx_MoveVelocity2MoveAbsolute.c  test_adx_MoveVelocity2MoveVelocity.c  test_adx_ReadStatus.c  test_adx_SetOverride.c  test_adx_Stop2MoveAbsolute.c  test_adx_softLmt.c
docs/: open-source-highlights.md
flexCore/: CmakeLists.txt  cmdNo.h  cmdexcute.c  cmdexcute.h  flexCore_if.c  flexCore_if.h
flexCore/matlab/: allAxisPlot.m  axisPlot.m  gifplot.m  interpolationTest.m  pngplot.m  sCureTest.m  showResult.m
flexCore/mcCore/: ArcGeometryCalculation.c  ArcGeometryCalculation.h  CMakeLists.txt  Interpolation.c  Interpolation.h  InterpolatorImplementation.c  InterpolatorImplementation.h  MathLib.c  MathLib.h  Queue.c  Queue.h  README_Interpolator.md  VelocityPlanning.c  VelocityPlanning.h  axisBaseState.c  axisContinusMotionState.c  axisControl.c  axisControl.h  axisDisableState.c  axisDiscreteMotionState.c  axisErrorStopState.c  axisHomingState.c  axisStandstillState.c  axisStoppingState.c  axisSyncMotiondState.c  errorDefine.h  groupBaseState.c  groupControl.c  groupControl.h  groupDisableState.c  groupErrorStopState.c  groupHomingState.c  groupMovingState.c  groupStandbyState.c  groupStoppingState.c  mcCore.c  mcCore.h  mcTypes.h  onlinetrapeprofile.c  onlinetrapeprofile.h  (+2 more)
simModel/: adxSim.ttt  base.prt  base.stl  base_bk.stl  model2Y.prt  modelStageY.prt  modelX.prt  modelY.prt  modelZ.prt  moduleA.prt  moduleA.stl  moduleA_bk.stl  moduleC.prt
testCli/: CMakeLists.txt  logger.cpp  pipe.h  testFile.cpp  testFun.cpp  testFun.h  testSim.cpp
testCli/mcHal/motorDrivers/: CMakeLists.txt  motorDrv.cpp  motorDrv.h  motorHal.c  motorHal.h
testCli/mcHal/motorDrivers/coppeliasim/: CMakeLists.txt  example.c  remote_api_c_wrapper.cpp  remote_api_c_wrapper.h  sim_driver.c
testCli/mcHal/motorDrivers/inovnace/: CMakeLists.txt  motorDriver.c  motorDriver.h
